@@ -2,10 +2,7 @@
 <settings>
 	<category label="30000">
 		<setting id="save_location" type="folder" source="files" label="30001" default=""/>		
-		<setting id="custom_file_name" type="bool" label="30008" default="false"/>
-		<setting id="file_name" type="text" label="30009" subsetting="true" default="XBMC Library Report.html" enable="eq(-1,true)" visible="eq(-1,true)"/>	
-		<setting type="sep" />
-		
+		<setting type="sep" />		
 		<setting id="includemovies" type="bool" label="30002" default="true"/>
 		<setting id="movieplot" type="bool" label="30010" subsetting="true" enable="eq(-1,true)" visible="eq(-1,true)" default="false"/>
 		<setting id="msort_by" type="enum" subsetting="true" label="30033" lvalues="30034|30035|30036|30037" default="0" enable="eq(-2,true)" visible="eq(-2,true)"/>
@@ -31,5 +28,18 @@
 		<setting type="sep" />
 		<setting type="lsep" label="30038"/>
 		<setting type="lsep" label="30039"/>
+	</category>
+	<category label="30016">
+		<setting id="Enable_Password" type="bool" label="30017" default="false"/>	
+		<setting type="sep" />
+		<setting type="lsep" label="30018"/>
+		<setting id="web_user" type="text" label="30023" subsetting="true" enable="eq(-3,true)" default="admin"/>
+		<setting id="web_password" type="text" label="30024" subsetting="true" enable="eq(-4,true)" default="admin" option="hidden"/>		
+		<setting type="sep" />
+		<setting id="logout_url" type="text" label="30019" subsetting="true" enable="eq(-6,true)" default="www.google.com"/>
+		<setting type="sep" />
+		<setting type="lsep" label="30008"/>
+		<setting type="lsep" label="30009"/>
+		<setting id="webpage_location_php" type="text" label="30040" subsetting="true" enable="eq(-10,true)" default=""/>
 	</category>
 </settings>
